package com.example.learn.design.pattern.han._05结构型模式._01适配器模式._02对象适配器;

//适配接口
public interface IVoltage5V {
    public int output5V();
}
